--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,17 +5,29 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory: { memory: null }
+    # used to reload user from session & other features (e.g. switch_user)
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
 
-    login:
-      pattern: ^/api/login
+    # login:
+    #   pattern: ^/api/login
+    #   stateless: true
+    #   json_login:
+    #     check_path: /api/login_check
+    #     success_handler: lexik_jwt_authentication.handler.authentication_success
+    #     failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+    jwt_auth:
+      pattern: ^/auth
       stateless: true
       json_login:
-        check_path: /api/login_check
+        check_path: jwt_auth
         success_handler: lexik_jwt_authentication.handler.authentication_success
         failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
@@ -24,9 +36,9 @@ security:
       stateless: true
       jwt: ~
 
-    # main:
-    #     lazy: true
-    #     provider: users_in_memory
+    main:
+      lazy: true
+      provider: app_user_provider
 
     # activate different ways to authenticate
     # https://symfony.com/doc/current/security.html#the-firewall
@@ -39,7 +51,9 @@ security:
   access_control:
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
-    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    # - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/auth, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
@@ -54,4 +68,5 @@ when@test:
         cost: 4 # Lowest possible value for bcrypt
         time_cost: 3 # Lowest possible value for argon
         memory_cost: 10 # Lowest possible value for argon
+
 
